linter fixing / added auto-fixing css

--- a/scss/hover.css
+++ b/scss/hover.css
@@ -81,6 +81,7 @@ img {
   letter-spacing: 1px;
   font-size: 15px;
   margin-top: 8px;
+  color: antiquewhite;
   color: rgba(255, 255, 255, 0.808);
 }
 
