--- a/css/hover.css
+++ b/css/hover.css
@@ -1,42 +1,40 @@
 img {
   width: 447.2px;
-  height: 260px;  
+  height: 260px;
 }
 
 .team-area {
   display: flex;
   width: 1390px;
   justify-content: space-around;
-  grid-gap: 10px;  
+  grid-gap: 10px;
   margin-top: 100px;
   margin-left: 60px;
 }
 
 .single-team {
   width: 447.2px;
-  height: 260px;  
+  height: 260px;
   padding: 24px;
   background: #fff;
   position: relative;
   display: flex;
   align-items: flex-end;
   transition: .6s ease-out;
-  box-shadow: 0 10px 10px rgba(0, 0, 0,0.5);  
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
 }
 
+.single-team .team-text {
+  position: relative;
+  z-index: 3;
+  color: #fff;
+  opacity: 0;
+  transform: translateY(60px);
+  transition: 0.5s;
+}
 
 .single-team:hover {
-  transform: translateY(15px);  
-}
-
-.single-team:hover:before {
-  opacity: 1;
-  
-}
-
-.single-team:hover .team-text {
-  opacity: 1;
-  transform: translateY(0);  
+  transform: translateY(15px);
 }
 
 .single-team:before {
@@ -50,7 +48,16 @@ img {
   background: linear-gradient(to top, #000, transparent);
   z-index: 2;
   transition: 0.5s;
-  opacity: 0;  
+  opacity: 0;
+}
+
+.single-team:hover:before {
+  opacity: 1;
+}
+
+.single-team:hover .team-text {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .single-team img {
@@ -60,15 +67,6 @@ img {
   top: 0;
   left: 0;
   object-fit: cover;
-}
-
-.single-team .team-text {
-  position: relative;
-  z-index: 3;
-  color: #fff;
-  opacity: 0;
-  transform: translateY(60px);
-  transition: 0.5s;
 }
 
 .team-text h2 {
@@ -85,8 +83,8 @@ img {
   color: rgba(255, 255, 255, 0.808);
 }
 
-.team-text a {  
-  display: inline-block;  
+.team-text a {
+  display: inline-block;
   margin: 0 5px;
   text-decoration: none;
 }
