--- a/css/hover.css
+++ b/css/hover.css
@@ -20,7 +20,7 @@ img {
   position: relative;
   display: flex;
   align-items: flex-end;
-  transition: .6s ease-out;
+  transition: 0.6s ease-out;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
 }
 
@@ -37,7 +37,7 @@ img {
   transform: translateY(15px);
 }
 
-.single-team:before {
+.single-team::before {
   content: '';
   position: absolute;
   top: 0;
@@ -51,7 +51,7 @@ img {
   opacity: 0;
 }
 
-.single-team:hover:before {
+.single-team:hover::before {
   opacity: 1;
 }
 
