--- a/css/hover.css
+++ b/css/hover.css
@@ -89,6 +89,11 @@
     color: #fff;
     padding: 6px 8px;
   }
+
+  footer {    
+    text-align: center;
+    padding-bottom: 18px;    
+  }
 }
 
 @media (max-width: 600px) {
@@ -122,12 +127,12 @@
     z-index: 3;
     color: #fff;
     opacity: 0;
-    transform: translateY(60px);
-    transition: 0.5s;
+    /* transform: translateY(60px); */
+    /* transition: 0.5s; */
   }
 
   .single-team:hover {
-    transform: translateY(10px);
+    /* transform: translateY(10px); */
   }
 
   .single-team::before {
@@ -160,11 +165,7 @@
     top: 0;
     left: 0;
     object-fit: cover;
-  }
-
-  .team-text > .test {
-    text-align: right;
-  }
+  }  
 
   .team-text h2 {
     margin: 0;
@@ -178,17 +179,6 @@
     margin-top: 1px;
     color: antiquewhite;
     color: rgba(255, 255, 255, 0.808);
-  }
-
-  .team-text a {
-    display: inline-block;
-    margin: 0 5px;
-    text-decoration: none;
-  }
-
-  .team-text a i {
-    color: #fff;
-    padding: 6px 8px;
   }
 
   .social-icons {
@@ -207,6 +197,44 @@
     text-align: center;
     font-size: 1.5rem;
     line-height: 3.5rem;
-    margin-top: 1.5rem;
+    margin-top: 1.5rem;    
+  }
+
+  .summary-stack {            
+    width: 300px;    
+    height: 60px;
+    display: grid;
+    grid-template: repeat(1, 1fr) / repeat(4, 1fr);    
+  }
+
+  .item1 {
+    position: relative;
+    display: grid;
+    margin: 0;    
+    grid-area: 1 / 1 / span 1 / span  2;    
+    font-size: 0.8rem;
+    letter-spacing: 0.1rem;
+  }
+
+  .item1 li {
+    position: relative;
+  }
+  
+  .item2 {
+    position: relative;    
+    margin: 0;    
+    grid-area: 1 / 3/ span 1 / span 2;    
+    text-align: center;    
+  }
+
+  .item2 a {
+    position: relative;    
+  }
+
+  .item2 a i {
+    position: relative;
+    margin: 12px 0;
+    color: #fff;
+    padding: 4px 6px;    
   }
 }
