--- a/css/hover.css
+++ b/css/hover.css
@@ -22,6 +22,8 @@
 
   .single-team .team-text {
     position: relative;
+    width: 100%;
+    height: 200px;
     z-index: 3;
     color: #fff;
     opacity: 0;
@@ -68,7 +70,7 @@
   .team-text h2 {
     margin: 0;
     letter-spacing: 3px;
-    color: rgba(255, 255, 255, 0.575);
+    color: rgba(255, 255, 255, 0.767);
   }
 
   .team-text p {
@@ -77,17 +79,45 @@
     margin-top: 8px;
     color: antiquewhite;
     color: rgba(255, 255, 255, 0.808);
+  }  
+
+  .summary-stack {            
+    width: 100%;    
+    height: 60px;
+    display: grid;
+    grid-template: repeat(1, 1fr) / repeat(4, 1fr);    
   }
 
-  .team-text a {
-    display: inline-block;
-    margin: 0 5px;
-    text-decoration: none;
+  .item1 {
+    position: relative;
+    display: grid;
+    margin: 0;    
+    grid-area: 1 / 1 / span 1 / span  2;    
+    font-size: 0.8rem;
+    letter-spacing: 0.1rem;
   }
 
-  .team-text a i {
+  .item1 li {
+    position: relative;
+  }
+  
+  .item2 {
+    position: relative;    
+    margin: 0;    
+    grid-area: 1 / 3/ span 1 / span 2;    
+    text-align: center;    
+  }
+
+  .item2 a {
+    position: relative;    
+  }
+
+  .item2 a i {
+    position: relative;
+    font-size: 45px;
+    margin: 12px 0;
     color: #fff;
-    padding: 6px 8px;
+    padding: 4px 6px;
   }
 
   footer {    
@@ -127,12 +157,12 @@
     z-index: 3;
     color: #fff;
     opacity: 0;
-    /* transform: translateY(60px); */
-    /* transition: 0.5s; */
+    transform: translateY(60px);
+    transition: 0.5s;
   }
 
   .single-team:hover {
-    /* transform: translateY(10px); */
+    transform: translateY(10px);
   }
 
   .single-team::before {
@@ -169,16 +199,17 @@
 
   .team-text h2 {
     margin: 0;
+    font-size: 2.5rem;
     letter-spacing: 3px;
-    color: rgba(255, 255, 255, 0.89);
+    color: rgba(255, 255, 255, 0.658);
   }
 
   .team-text p {
     letter-spacing: 1px;
-    font-size: 25px;
+    font-size: 20px;
     margin-top: 1px;
     color: antiquewhite;
-    color: rgba(255, 255, 255, 0.808);
+    color: rgba(255, 255, 255, 0.651);
   }
 
   .social-icons {
@@ -192,7 +223,7 @@
     height: 3.5rem;
     width: 3.5rem;
     background-color: #495057;
-    color: #fff !important;
+    color: rgba(255, 255, 255, 0.445) !important;
     border-radius: 100%;
     text-align: center;
     font-size: 1.5rem;
@@ -218,6 +249,7 @@
 
   .item1 li {
     position: relative;
+    color: rgba(255, 255, 255, 0.63);
   }
   
   .item2 {
@@ -234,7 +266,7 @@
   .item2 a i {
     position: relative;
     margin: 12px 0;
-    color: #fff;
+    color: rgba(255, 255, 255, 0.63);
     padding: 4px 6px;    
   }
 }
