--- a/css/hover.css
+++ b/css/hover.css
@@ -1,17 +1,15 @@
 @media only screen and (min-width: 600px) {
-
   .team-area {
     display: flex;
-    width: 1390px;
+    width: 100%;
     justify-content: space-around;
     grid-gap: 10px;
-    margin-top: 100px;
-    margin-left: 60px;
+    margin-top: 100px;    
   }
 
   .single-team {
-    width: 447.2px;
-    height: 260px;
+    width: 313.04px;
+    height: 182px;
     padding: 24px;
     background: #fff;
     position: relative;
@@ -19,12 +17,12 @@
     align-items: flex-end;
     transition: 0.6s ease-out;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
-  }
+  }  
 
   .single-team .team-text {
     position: relative;
     width: 100%;
-    height: 200px;
+    height: 160px;    
     z-index: 3;
     color: #fff;
     opacity: 0;
@@ -42,8 +40,8 @@
     top: 0;
     left: 0;
     display: block;
-    width: 447.2px;
-    height: 260px;
+    width: 313.04px;
+    height: 182px;
     background: linear-gradient(to top, #000, transparent);
     z-index: 2;
     transition: 0.5s;
@@ -60,8 +58,8 @@
   }
 
   .single-team img {
-    width: 447.2px;
-    height: 260px;
+    width: 313.04px;
+    height: 182px;
     position: absolute;
     top: 0;
     left: 0;
@@ -78,15 +76,17 @@
     letter-spacing: 1px;
     font-size: 15px;
     margin-top: 8px;
+    margin-bottom: 0;
     color: antiquewhite;
     color: rgba(255, 255, 255, 0.808);
   }
 
   .summary-stack {
     width: 100%;
-    height: 60px;
+    position: absolute;    
     display: grid;
     grid-template: repeat(1, 1fr) / repeat(4, 1fr);
+    bottom: 0;
   }
 
   .item1 {
@@ -94,12 +94,13 @@
     display: grid;
     margin: 0;
     grid-area: 1 / 1 / span 1 / span 2;
-    font-size: 0.8rem;
-    letter-spacing: 0.1rem;
+    font-size: 0.7rem;
+    letter-spacing: 0.1rem;    
   }
 
   .item1 li {
-    position: relative;
+    position: relative;        
+    margin: 0;    
   }
 
   .item2 {
@@ -115,8 +116,8 @@
 
   .item2 a i {
     position: relative;
-    font-size: 45px;
-    margin: 12px 0;
+    font-size: 35px;
+    margin: 5px 0;
     color: #fff;
     padding: 4px 6px;
   }
