--- a/css/hover.css
+++ b/css/hover.css
@@ -73,6 +73,7 @@
   .team-text h2 {
     margin: 0;
     letter-spacing: 0.1875rem;
+    font-size: 2.5rem;
     color: rgba(255, 255, 255, 0.767);
   }
 
@@ -287,10 +288,6 @@
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
   }
 
-  .team-text {
-    display: grid;
-    width: 100%;
-  }
 
   .single-team .team-text {
     position: relative;
@@ -337,7 +334,16 @@
     object-fit: cover;
   }
 
+  .team-text {
+    display: grid;
+    width: 100%;
+    height: 11rem !important;
+    margin-bottom: -1rem;
+  }
+
   .team-text h2 {
+    position: relative;
+    height: 40px;
     margin: 0;
     font-size: 2.5rem;
     letter-spacing: 3px;
@@ -345,9 +351,10 @@
   }
 
   .team-text p {
+    position: relative;
+    margin-bottom: 5rem !important;
     letter-spacing: 1px;
     font-size: 20px;
-    margin-top: 1px;
     color: antiquewhite;
     color: rgba(255, 255, 255, 0.651);
   }
@@ -374,7 +381,7 @@
 
   .summary-stack {
     width: 300px;
-    height: 60px;
+    height: 80px;
     display: grid;
     grid-template: repeat(1, 1fr) / repeat(4, 1fr);
   }
@@ -382,6 +389,7 @@
   .item1 {
     position: relative;
     display: grid;
+    height: 50%;
     margin: 0;
     grid-area: 1 / 1 / span 1 / span 2;
     font-size: 0.8rem;
@@ -398,6 +406,7 @@
     margin: 0;
     grid-area: 1 / 3/ span 1 / span 2;
     text-align: center;
+    margin-top: 1.2rem !important;
   }
 
   .item2 a {
@@ -406,8 +415,9 @@
 
   .item2 a i {
     position: relative;
-    margin: 12px 0;
+    margin: 0;
     color: rgba(255, 255, 255, 0.63);
     padding: 4px 6px;
+    font-size: 3rem;
   }
 }
