spec ratio test

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -4,7 +4,7 @@ body {
   @include body-font;
   padding-top: 54px;
   color: $gray-600;
-  background-color: $white;
+  background-color: $black;
 }
 
 // hr {
