--- a/css/resume.css
+++ b/css/resume.css
@@ -8,7 +8,7 @@ body {
   font-family: 'Muli', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   padding-top: 54px;
   color: #868e96;
-  background-color: #000;
+  background-color: #fff;
 }
 
 @media (min-width: 992px) {
@@ -73,7 +73,7 @@ p.lead {
 }
 
 .social-icons a:hover {
-  background-color: #BD5D38;
+  background-color: #A51D2B;
 }
 
 .dev-icons {
@@ -81,7 +81,7 @@ p.lead {
 }
 
 .dev-icons .list-inline-item i:hover {
-  color: #BD5D38;
+  color: #A51D2B;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -91,7 +91,7 @@ p.lead {
 }
 
 #sideNav .navbar-toggler:focus {
-  outline-color: #d48a6e;
+  outline-color: #db3345;
 }
 
 @media (min-width: 992px) {
@@ -177,17 +177,17 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: #A51D2B !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: #A51D2B !important;
 }
 
 a {
-  color: #BD5D38;
+  color: #A51D2B;
 }
 
 a:hover, a:focus, a:active {
-  color: #824027;
+  color: #64121a;
 }
