--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -18,7 +18,7 @@ $blue:    #007bff !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
-$red:     #A51D2B !default;
+$red:     #a51d2b !default;
 $orange:  #BD5D38 !default;
 $yellow:  #ffc107 !default;
 $green:   #28a745 !default;
@@ -26,7 +26,7 @@ $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 
 $primary:       $red !default;
-$secondary:     $gray-500 !default;
+$secondary:     $gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
