--- a/css/hover.css
+++ b/css/hover.css
@@ -284,7 +284,7 @@
     position: relative;
     display: flex;
     align-items: flex-end;
-    transition: 0.6s ease-out;
+    transition: none;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
   }
 
@@ -299,13 +299,13 @@
     position: relative;
     z-index: 3;
     color: #fff;
-    opacity: 0;
-    transform: translateY(60px);
-    transition: 0.5s;
+    opacity: 1;
+    transform: none;
+    /* transition: 0s; */
   }
 
   .single-team:hover {
-    transform: translateY(10px);
+    /* transform: translateY(10px); */
   }
 
   .single-team::before {
@@ -318,8 +318,8 @@
     height: 208px;
     background: linear-gradient(to top, #000, transparent);
     z-index: 2;
-    transition: 0.5s;
-    opacity: 0;
+    /* transition: 0.5s; */
+    opacity: 1;
   }
 
   .single-team:hover::before {
@@ -328,7 +328,7 @@
 
   .single-team:hover .team-text {
     opacity: 1;
-    transform: translateY(0);
+    /* transform: translateY(0); */
   }
 
   .single-team img {
