--- a/css/hover.css
+++ b/css/hover.css
@@ -305,7 +305,7 @@
   }
 
   .single-team:hover {
-    /* transform: translateY(10px); */
+    transform: none;
   }
 
   .single-team::before {
@@ -316,8 +316,8 @@
     display: block;
     width: 357.76px;
     height: 208px;
-    background: rgb(255,255,255);
-    background: radial-gradient(circle, rgba(255,255,255,0.5550420851934523) 0%, rgba(0,0,0,0.47100847174807425) 100%); 
+    background: rgb(165,29,43);
+    background: radial-gradient(circle, rgba(165,29,43,0.48501407398897056) 0%, rgba(189,140,140,0.7287115529805672) 100%); 
     z-index: 2;
     /* transition: 0.5s; */
     opacity: 1;
@@ -329,7 +329,7 @@
 
   .single-team:hover .team-text {
     opacity: 1;
-    /* transform: translateY(0); */
+    transform: none;
   }
 
   .single-team img {
