skills modification updated with small hover

--- a/css/hover.css
+++ b/css/hover.css
@@ -423,4 +423,26 @@
     padding: 4px 6px;
     font-size: 3rem;
   }
+
+  li.list-inline-item:hover {
+    animation: shake 0.6s infinite;
+  }
+
+  @keyframes shake {
+    0% {
+      transform: translate(0px, 0px) rotate(0deg);
+    }
+    25% {
+      transform: translate(1px, 1px) rotate(1deg);
+    }
+    50% {
+      transform: translate(-1px, -1px) rotate(-1deg);
+    }
+    75% {
+      transform: translate(2px, 1px) rotate(2deg);
+    }
+    100% {
+      transform: translate(-1px, 1px) rotate(-1deg);
+    }
+  }
 }
