--- a/css/resume.css
+++ b/css/resume.css
@@ -160,6 +160,12 @@ section.resume-section .resume-item .resume-date {
   min-width: none;
 }
 
+section.resume-link {
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
+  min-height: 10vh !important;
+}
+
 @media (min-width: 768px) {
   section.resume-section {
     min-height: 100vh;
