--- a/scss/_resume-item.scss
+++ b/scss/_resume-item.scss
@@ -9,6 +9,11 @@ section.resume-section {
     }
   }
 }
+section.resume-link {
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
+  min-height: 10vh !important;
+}
 @media (min-width: 768px) {
   section.resume-section {
     min-height: 100vh;
