--- a/css/hover.css
+++ b/css/hover.css
@@ -335,7 +335,7 @@
     margin: 0;
     font-size: 2.5rem;
     letter-spacing: 3px;
-    color: rgb(248, 248, 248);
+    color: #fff;
   }
 
   .team-text p {
@@ -343,11 +343,11 @@
     margin-bottom: 5rem !important;
     letter-spacing: 1px;
     font-size: 20px;
-    color: rgb(248, 248, 248);
+    color: #fff;
   }
 
   .item1 li, .item2 i{
-    color: rgb(248, 248, 248) !important;
+    color: #fff !important;
   }
 
   .social-icons {
