--- a/css/hover.css
+++ b/css/hover.css
@@ -48,8 +48,8 @@
     width: 19.565rem;
     height: 11.375rem;
     border-radius: 10px;
-    background: rgb(2,0,36);
-    background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(0,119,181,1) 10%); 
+    background: rgb(2, 0, 36);
+    background: linear-gradient(0deg,rgba(2,0,36,1) 0%,rgba(0,119,181,1) 10%);
     z-index: 2;
     transition: 0.5s;
     opacity: 0;
@@ -178,8 +178,8 @@
     width: 15.652rem;
     height: 9.1rem;
     border-radius: 10px;
-    background: rgb(2,0,36);
-    background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(0,119,181,1) 10%); 
+    background: rgb(2, 0, 36);
+    background: linear-gradient(0deg,rgba(2,0,36,1) 0%,rgba(0,119,181,1) 10%);
     z-index: 2;
     transition: 0.5s;
     opacity: 0;
