--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -87,3 +87,10 @@ p.lead {
     }
   }
 }
+
+@media only screen and (min-width: 768px) {
+  footer > .social-icons {
+    display: flex;
+    justify-content: center;
+  }
+}
